# tfm-libvirt

./: .editorconfig  .envrc  .gitignore  LICENSE  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: labels.toml
.github/workflows/: labels.yml  terraform.yml
fetch/: centos.sh  debian.sh  ubuntu.sh
modules/net/: .terraform-docs.yml  README.md  libvirt.tf  main.tf  network.tf  providers.tf  providrs.tf  variables.tf  versions.tf
modules/ubuntu/: main.tf  variables.tf
modules/ubuntu/.terraform/plugins/linux_amd64/: lock.json
modules/vm/: .terraform.lock.hcl  README.md  machine.tf  main.tf  output.tf  providers.tf  remove-graphics.xsl  terraform.tf  variables.tf  versions.tf  vm-sample.xml
scripts/: debian.sh  fetch-images.sh  tf-docs.sh  ubuntu.sh
test/: ansible.cfg  assert.yml
test/centos/: assert.yml  main.tf  user-data.cfg
test/ubuntu/: .terraform.lock.hcl  assert.yml  main.tf  user-data.cfg
tests/: assert.yml  main.tf  user-data.cfg
