[tool.poetry]
name = "tf-libvirt"
version = "0.2.0"
description = "Terraform modules for libvirt"
authors = ["Prasad Tengse <tprasadtp@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ansible = "~2.9.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
