[tool.poetry]
name = "tfm-libvirt"
version = "0.3.0"
description = "Terraform modules for libvirt"
authors = ["Prasad Tengse <tprasadtp@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
ansible = "~2.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
